Fixed horizontal scrollbar

--- a/apps/workmanager/src/app/header/preview/quick-find/qf-modal-search-results/communication-type-result/communication-type-result.component.scss
+++ b/apps/workmanager/src/app/header/preview/quick-find/qf-modal-search-results/communication-type-result/communication-type-result.component.scss
@@ -19,5 +19,6 @@
 
   &__scrollable {
     overflow: auto;
+    white-space: break-spaces;
   }
 }
